<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>be.domotiqueinformatique.tools</groupId>
    <artifactId>knx2mqtt_to_homekit2mqtt</artifactId>
    <version>1.0.0-beta1</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>be.domotiqueinformatique.tools</groupId>
            <artifactId>knx2mqtt-common</artifactId>
            <version>1.0.1-beta.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.calimero</groupId>
            <artifactId>calimero-core</artifactId>
            <version>2.5-M1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20230618</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>jar-with-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <archive>
                                <manifest>
                                    <mainClass>be.domotiqueinformatique.tools.Main</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <finalName>knx2mqtt_to_homekit2mqtt</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <repository>
            <id>nexus_home</id>
            <layout>default</layout>
            <name>Nexus home</name>
            <url>https://nexus.domotique-informatique.be/repository/maven-releases/</url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>nexus_home</id>
            <layout>default</layout>
            <name>Nexus home</name>
            <url>https://nexus.domotique-informatique.be/repository/maven-releases/</url>
        </repository>
    </repositories>
</project>